src/global.scss
@import "../node_modules/bootstrap/scss/bootstrap.scss";
@import "../node_modules/bootstrap/scss/variables";

body {
  overflow-y: hidden;
}

.react-icon-light {
  height: 1.25em;
  width: 1.25em;

  > path {
    color: white;
  }
}

.left-navigation {
  @extend .p-3, .text-white, .bg-dark;
  width: 280px;
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: column;
}

@include media-breakpoint-down(lg) {
  .hide-on-mobile {
    display: none !important;
  }
}

@include media-breakpoint-up(lg) {
  .hide-on-desktop {
    display: none !important;
  }
}

.main-column {
  display: flex;
  flex-grow: 1;
  flex-shrink: 1;
  flex-direction: column;
  padding: 0;
}

.top-navigation {
  flex-grow: 0;
  flex-shrink: 0;

  .container-fluid {
    padding-left: 0.25em;
  }

  @include media-breakpoint-up(lg) {
    background-color: $gray-600;
  }

  @include media-breakpoint-down(lg) {
    background-color: $dark;
  }
}

.navigation-button-container {
  margin-right: 0.5em;
  width: 2.5em;
  height: 2.5em;
}

.navbar-title {
  @extend .fs-4, .text-white
}

.main-column-content-wrapper {
  display: flex;
  flex-grow: 1;
  flex-shrink: 1;
  position: relative;
  overflow-y: hidden;
}

.main-column-content {
  @extend .p-3;
  overflow-y: auto;
  width: 100%;
}

.bottom-navigation {
  @extend .text-white, .bg-dark;
  padding: 5px 10px;
  align-items: center;
  min-height: 40px;
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: nowrap;
}

.fab:hover {
  background: #1295f3;
}

.option-pills.nav-pills > .nav-item > .nav-link.active {
  background-color: rgba(40, 46, 54, 1);
  color: white;
}

.left-navigation > h6 {
  color: #767676;
  margin-bottom: 0;
}

